<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2010 ZXing authors

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>

    <string name="app_name">MOBILE MUSEUM GUIDE</string>
    <string name="capture_name">QR Code Capture</string>
    <string name="encoder_name">QR Code Encoder</string>
    <string name="decoder_name">QR Code Decoder</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="msg_default_contents" translatable="false">Contents</string>
    <string name="msg_default_format" translatable="false">Format</string>
    <string name="msg_default_meta" translatable="false">Metadata</string>
    <string name="msg_default_mms_subject" translatable="false">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time" translatable="false">Time</string>
    <string name="msg_default_type" translatable="false">Type</string>
    <string name="result_address_book" translatable="false">Found contact info</string>
    <string name="result_calendar" translatable="false">Found calendar event</string>
    <string name="result_email_address" translatable="false">Found email address</string>
    <string name="result_geo" translatable="false">Found geographic coordinates</string>
    <string name="result_isbn" translatable="false">Found book</string>
    <string name="result_product" translatable="false">Found product</string>
    <string name="result_sms" translatable="false">Found SMS address</string>
    <string name="result_tel" translatable="false">Found phone number</string>
    <string name="result_text" translatable="false">Found plain text</string>
    <string name="result_uri" translatable="false">Found URL</string>
    <string name="result_wifi" translatable="false">Found WLAN Configuration</string>
    <string name="wifi_changing_network" translatable="false">Changing Network</string>
    <string name="wifi_ssid_label" translatable="false">Network Name</string>
    <string name="wifi_type_label" translatable="false">Type</string>
    <string name="barcode_image">Barcode Image</string>
    <string name="msg_query_is_sending">Query sended to server. Whaiting for answer.</string>
    <string name="msg_server_unavalble">Server unavailable now. Contact the staff.</string>
    <string name="content_browser_activity_name">Content browser</string>
    <string name="db_name" translatable="false">exibit</string>
    <string name="title_activity_content_browser">Content browser</string>
    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="msg_code_not_found">Exhibit not found. Please, try another.</string>
    <string name="title_activity_image_view">Image viewing</string>
    <string name="text_content_veiw_title">Exhibit information</string>
    <string name="audio_content_veiw_title">Audio information</string>
    <string name="video_content_veiw_title">Video content</string>
    <string name="msg_no_audio">Exhibit has no audio.</string>
    <string name="title_activity_playing_video">Playing Video</string>
    <string name="failed">Something wrong is happend. Contact the staff.</string>
    <string name="zero_track_length" translatable="false">0:00</string>
    <string name="default_current_track_name">Media file name</string>
    <string name="item_name">Item name</string>
    <string name="no_video_label">This exhibit has no video materials.</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="submit_feedback_button_calptire">Submit feedback</string>
    <string name="feedback_qr_code" translatable="false">feedback_qr_code_string</string>
    <string name="feedback_activity_label">Feedback</string>
    <string name="item_feedback_button_calpture">Send feedback about this item</string>
    <string name="contents_name">Name</string>
    <string name="feedback_welcome_text">We really appreciate it. If you would like to, we will contact with you. Just leave  your contact details in the corresponding row.</string>
    <string name="msg_feedback_fail_msg">Sending feedback is faild. Contact with staff</string>
    <string name="msg_feedback_succsess_msg">Thank you! Your suggestions will not go unheeded.</string>
    <string name="walcome_feedback_text0">Thank you, that you decided give us feedback!</string>
    <string name="title_activity_hidden">HiddenActivity</string>

</resources>
