<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tk.hackspace.MusemMobileApp.FeedbackActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/walcome_feedback_text0"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback_welcome_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/feedbackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:editable="true"
                android:inputType="textMultiLine"
                android:lines="10" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:rating="2.55"
                android:visibility="gone" />

            <EditText
                android:id="@+id/feedbackVisitorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="true"
                android:ems="10"
                android:hint="@string/contents_name"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false" />

            <EditText
                android:id="@+id/feedbackVisitorContactText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="true"
                android:ems="10"
                android:hint="@string/contents_contact"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.DeviceDefault.Light.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onSubmitButtonClick"
                android:text="@string/submit_feedback_button_calptire" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
