<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="tk.hackspace.MusemMobileApp.AudioContent">


    <TextView
        android:id="@+id/audioItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/item_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="25dip"
        android:scaleType="centerInside"
        android:src="@drawable/line3" />

    <TextView
        android:id="@+id/current_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:text="@string/default_current_track_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/player_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_track_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="fill_vertical"
                android:text="@string/zero_track_length"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/secondary_text_light" />

            <ImageView
                android:id="@+id/play_pause_button"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:src="@drawable/play_button_t" />

            <TextView
                android:id="@+id/current_track_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="fill_vertical"
                android:text="@string/zero_track_length"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/secondary_text_light" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/player_seek_bar"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:indeterminate="false" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="25dip"
        android:scaleType="centerInside"
        android:src="@drawable/line3" />

    <ListView
        android:id="@+id/audio_file_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
